# Multimodal-RAG

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_users.py  003_group_id.py  004_tags_retention.py
scripts/: evaluate.py  test_set_example.json
src/: main.py
src/api/: app.py  worker.py
src/auth/: __init__.py  deps.py  models.py  schemas.py
src/chat/: __init__.py  history.py
src/config/: settings.py
src/core/: __init__.py  cache.py  embeddings.py  guardrails.py  logging.py  metrics.py  retry.py
src/generation/: __init__.py  graph.py  prompts.py  rag_chain.py
src/ingestion/: __init__.py  audio_processor.py  document_processor.py  pdf_processor.py
src/models/: __init__.py  schemas.py
src/pipeline/: __init__.py  pipeline.py
src/retrieval/: __init__.py  query_transformer.py  reranker.py  retriever.py  self_query.py  vector_store.py
src/storage/: __init__.py  redis_docstore.py
src/summarization/: __init__.py  image_summarizer.py  orchestrator.py  text_summarizer.py
src/ui/: app.py
tests/: conftest.py  test_embeddings.py  test_generation.py  test_ingestion.py  test_pipeline.py  test_retrieval.py
